Refactor: Replace `Arrays.asList` with `List.of` in `Cliente` for improved readability and optimize axis rendering in `PainelMapa` with grid markers and labels